[build-system]
requires = ["setuptools>=61.2.0", "wheel", "setuptools_scm[toml]>=3.4.3", "kaitaiStructCompile[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "MFCTool"
authors = [{name = "KOLANICH"}]
description = "A library for accessing MifareClassicTool hex dumps"
readme = "README.md"
keywords = ["MFCtool", "Mifare Classic", "NXP"]
license = {text = "Unlicense"}
classifiers = [
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	#"Intended Audience :: Researchers",
	"License :: Public Domain",
	"Operating System :: OS Independent",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
urls = {Homepage = "https://codeberg.org/KFmts/MFCTool.py"}
dependencies = [
	"kaitaistruct", # @ git+https://github.com/kaitai-io/kaitai_struct_python_runtime.git
]
dynamic = ["version"]

[tool.setuptools]
zip-safe = true
packages = ["MFCTool"]

[tool.setuptools_scm]

[tool.kaitai]
outputDir = "MFCTool"

[tool.kaitai.flags]
readStoresPos = true

[tool.kaitai.repos."https://github.com/kaitai-io/kaitai_struct_formats.git"."master"]
update = true
localPath = "kaitai_struct_formats"

[tool.kaitai.repos."https://github.com/kaitai-io/kaitai_struct_formats.git"."master".formats.mifare_classic]
path = "hardware/mifare/mifare_classic.ksy"
